--- a/src/scss/pages/_navigation.scss
+++ b/src/scss/pages/_navigation.scss
@@ -113,9 +113,9 @@
 }   
 
 .jumpLink {
+    padding-top: 9px;
     text-decoration: none;
     text-align: center;
-    margin: 10px 0px 0px 120px;
     font-size: $font-size-s;
     color: $color-secondary-dark;
     font-weight: $normal;
